# pq-ai

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.experience.yml  docker-compose.yml  dockerfile.backed  dockerfile.backend  dockerfile.frontend  package-lock.json  package.json
services/api/: .dockerignore  Dockerfile  Dockerfile.experience  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 4f2c7a81d9b0_quarantine_legacy_scope_models.py  69011d99138d_add_model_payload.py  782e37a843cf_add_rbac_and_audit.py  9a40d2a88b91_add_integration_event_inbox.py  a4c91e2b7d60_add_factory_model_acceptance_policy.py  b2d91e8c4f3a_add_model_validation_and_artifacts.py  b81d5c947e21_add_measurement_reliability_governance.py  c34f9a0d2e18_add_durr_robot_trajectory_governance.py  c7a5d2e4b6f1_add_controlled_trials.py  d4f8a9c2b7e3_add_constraint_sources_and_rollbacks.py  d5e7a2c91f04_add_governed_material_characteristics.py  e3a6c9d21f70_add_leakage_safe_model_governance.py  e7dcc05b83f0_add_recommendation_execution_audit.py  f0a7b4c82d19_add_model_applicability_and_ood.py  f615aa57c04b_initial_schema.py
services/api/app/: __init__.py  main.py
services/api/app/api/: delete_policy.py  router.py
services/api/app/core/: cache.py  config.py  database_errors.py  referential_integrity.py  security.py
services/api/app/db/: base.py  init_db.py  reference_integrity.py  schema_policy.py  seed_demo.py  session.py
services/api/app/domain/: __init__.py  parameter_catalog.py  quality_metric_catalog.py  scope_policy.py
services/api/app/middleware/: security.py
services/api/app/models/: __init__.py  domain.py
services/api/app/schemas/: common.py  engineering.py  features.py  material.py  (+7 more)
services/api/tests/: conftest.py  schema_guard.py  test_api.py  test_body_map.py  test_body_map_3d.py  test_bulk_io.py  test_cache_and_quality_summary.py  test_catalogs.py  test_dashboard_snapshot.py  test_database_operation_policy.py  test_demo_service.py  test_domain_seed.py  test_engineering_workflow.py  test_integration.py  test_master_data_crud.py  test_material_governance.py  test_measurement_governance.py  test_modeling_pipeline.py  test_models.py  test_overview_summary.py  test_point_feature_pipeline.py  test_process_crud.py  test_quality_crud.py  test_quality_evaluation.py  test_recipe_wide.py  test_remote_program_release.py  test_robot_trajectory_governance.py  test_schema_policy.py  test_scope_policy.py  test_security.py  test_stp_convert.py  test_training_wide.py
(+227 files in other folders)
