[project]
name = "pq-ai-api"
version = "0.1.0"
description = "PQ-AI paint process and quality closed-loop API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "python-multipart==0.0.20",
  "SQLAlchemy>=2.0,<2.1",
  "pymysql==1.1.1",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
