[project]
name = "pq-ai-api"
version = "0.1.0"
description = "PQ-AI paint process and quality closed-loop API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "starlette==1.3.1",
  "anyio==4.14.2",
  "sniffio==1.3.1",
  "idna==3.18",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.32",
  "SQLAlchemy==2.0.36",
  "greenlet==3.1.1",
  "pymysql==1.1.1",
  "openpyxl==3.1.5",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
cad = [
  "cascadio==0.0.17",
]
dev = [
  "httpx2==2.7.0",
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
